--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-*.py linguist-language=true
 *.html linguist-detectable=false
-*.TeX linguist-detectable=false
+*.py linguist-language=Python
+*.TeX linguist-language=TeX
