--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,13 @@
+*.csharp linguist-detectable=false
+
+*.java linguist-detectable=false
+
+*.js linguist-detectable=false
+
 *.html linguist-detectable=false
-*.py linguist-language=Python
+
+*.xml linguist-detectable=false
+
+*.py linguist-detectable=true
+
 *.TeX linguist-detectable=TeX
