--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,2 @@
-*.py linguist-detectable=true
-*.html linguist-detectable=false
-*.tex linguist-detectable=false
+*.js linguist-language=Python
+*.html linguist-language=Python
